--- a/tp1NPL.ipynb
+++ b/tp1NPL.ipynb
@@ -3,7 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "mount_file_id": "1f-HzSqb5_WEGk1rWdz9Ndm3r1kVeLSCo",
+      "authorship_tag": "ABX9TyMzCnYJRVM6NQHST649OCmq",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +17,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/basmasaidi00/NPLtp/blob/main/tp1NPL.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [],
@@ -29,7 +42,7 @@
       "metadata": {
         "id": "rT5dyw3cl4HR"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -40,7 +53,19 @@
       "metadata": {
         "id": "xWu02k0GmlaE"
       },
-      "execution_count": 12,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "Mbl7SSDYkJbm"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -58,7 +83,7 @@
       "metadata": {
         "id": "3tjG8_pCmw9F"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -69,7 +94,7 @@
       "metadata": {
         "id": "n-mo9W7FnA9r"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -84,7 +109,7 @@
         "id": "f9u6tyZRnUyv",
         "outputId": "c95cf135-5ac5-40cb-dc5b-56255a047192"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -109,7 +134,7 @@
         "id": "9My3HKppnpyZ",
         "outputId": "da3e0e35-82d8-4179-ba7b-774f78044a7b"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -144,7 +169,7 @@
         "id": "9lUHk2RboCiP",
         "outputId": "5c4fa36f-cdea-4bc6-f21a-77c70078ec76"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -177,7 +202,7 @@
       "metadata": {
         "id": "qziVQkIjoNpF"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -193,7 +218,7 @@
         "id": "RkPFnoSBoejT",
         "outputId": "33342ef7-2a40-4fe8-c448-d51bb948afcd"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -646,7 +671,7 @@
         "id": "_gBs34u3r0Ss",
         "outputId": "c01057f1-3a52-4c0c-8210-5a0c954d7852"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
